# vk-internship-task

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  shortest_path.cpp  shortest_path.hpp
test/: CMakeLists.txt  bfs.cpp  dijkstra.cpp
